--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,17 @@
 * {
     box-sizing: border-box;
 }
+
+/* Customize scrollbar */
+.custom-scrollbar::-webkit-scrollbar {
+    width: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
