--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,20 @@
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
     background-color: #555;
 }
+
+@keyframes blink {
+
+    0%,
+    100% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.5;
+    }
+}
+
+
+.blink-animation {
+    animation: blink 1s linear infinite;
+}
